--- a/package.json
+++ b/package.json
@@ -18,11 +18,26 @@
   },
   "homepage": "https://github.com/ninja095/frontend-project-lvl2#readme",
   "dependencies": {
+    "debug": "^4.3.4",
     "commander": "^9.4.1",
     "lodash": "^4.17.21",
     "readfilesync": "^1.1.5"
   },
   "bin": {
     "gendiff": "bin/gendiff.js"
+  },
+  "devDependencies": {
+    "@jest/globals": "^29.0.1",
+    "eslint": "^8.23.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest": "^27.0.0",
+    "jest": "^29.0.1",
+    "jest-cli": "^29.0.1",
+    "npm-check-updates": "^16.0.6",
+    "simple-git-hooks": "^2.8.0"
+  },
+  "jest": {
+    "verbose": true
   }
 }
