--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
   },
   "homepage": "https://github.com/ninja095/frontend-project-lvl2#readme",
   "dependencies": {
-    "debug": "^4.3.4",
     "commander": "^9.4.1",
+    "debug": "^4.3.4",
     "lodash": "^4.17.21",
     "readfilesync": "^1.1.5"
   },
@@ -27,7 +27,10 @@
     "gendiff": "bin/gendiff.js"
   },
   "devDependencies": {
+    "@babel/core": "^7.20.7",
+    "@babel/preset-env": "^7.20.2",
     "@jest/globals": "^29.0.1",
+    "babel-jest": "^29.3.1",
     "eslint": "^8.23.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
