--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,34 +15,35 @@ jobs:
     # The type of machine to run the job on
     runs-on: macos-latest
 
-    strategy:
-      # Node versions list
-      matrix:
-        node-version: [18.x]
+    # strategy:
+    #   # Node versions list
+    #   matrix:
+    #     node-version: [16.x]
 
     steps:
       # Check-out repository under GitHub workspace
       # https://github.com/actions/checkout
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v2
         # Step's name
       - name: Use Node.js ${{ matrix.node-version }}
         # Configures the node version used on GitHub-hosted runners
         # https://github.com/actions/setup-node
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v2
         # The Node.js version to configure
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
+      # - run: make install
       - run: make install
       - run: make lint
       - run: make test
-      # - name: Test & publish code coverage
-      #   # Publish code coverage on Code Climate
-      #   # https://github.com/paambaati/codeclimate-action
-      #   uses: paambaati/codeclimate-action@v3.0.0
-      #   # Add Code Climate secret key
-      #   env:
-      #     CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
-      #   with:
-      #     coverageCommand: make test-coverage
-      #     debug: true
+      - name: Test & publish code coverage
+        # Publish code coverage on Code Climate
+        # https://github.com/paambaati/codeclimate-action
+        uses: paambaati/codeclimate-action@v3.0.0
+        # Add Code Climate secret key
+        env:
+          CC_TEST_REPORTER_ID: ${{secrets.CC_TEST_REPORTER_ID}}
+        with:
+          coverageCommand: make test-coverage
+          debug: true
