--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,10 +15,10 @@ jobs:
     # The type of machine to run the job on
     runs-on: macos-latest
 
-    # strategy:
-    #   # Node versions list
-    #   matrix:
-    #     node-version: [16.x]
+    strategy:
+      # Node versions list
+      matrix:
+        node-version: [14.x]
 
     steps:
       # Check-out repository under GitHub workspace
@@ -33,17 +33,16 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
-      # - run: make install
       - run: make install
       - run: make lint
       - run: make test
       - name: Test & publish code coverage
-        # Publish code coverage on Code Climate
-        # https://github.com/paambaati/codeclimate-action
+         # Publish code coverage on Code Climate
+         # https://github.com/paambaati/codeclimate-action
         uses: paambaati/codeclimate-action@v3.0.0
-        # Add Code Climate secret key
+         # Add Code Climate secret key
         env:
-          CC_TEST_REPORTER_ID: ${{secrets.CC_TEST_REPORTER_ID}}
+           CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
         with:
-          coverageCommand: make test-coverage
-          debug: true
+           coverageCommand: make test-coverage
+           debug: true
