--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,17 +1,15 @@
 {
-  "env": {
-    "node": true,
-    "es2021": true,
-    "jest": true
-  },
-  "extends": "airbnb-base",
-  "parserOptions": {
-    "ecmaVersion": 11,
-    "sourceType": "module"
-  },
-  "rules": {
-    "import/extensions": 0,
-    "no-console": "off",
-    "no-underscore-dangle":  ["error", { "allow": ["__filename", "__dirname"] }]
-  }
+    "env": {
+        "browser": true,
+        "es2021": true
+    },
+    "extends": [
+        "airbnb-base"
+    ],
+    "parserOptions": {
+        "ecmaVersion": "latest",
+        "sourceType": "module"
+    },
+    "rules": {
+    }
 }
