--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@hexlet/code",
   "version": "1.0.0",
-  "description": "[![Actions Status](https://github.com/ninja095/frontend-project-lvl2/workflows/hexlet-check/badge.svg)](https://github.com/ninja095/frontend-project-lvl2/actions)",
+  "description": "difference generator",
   "main": "src/index.js",
   "type": "module",
   "scripts": {
@@ -28,20 +28,13 @@
     "gendiff": "bin/gendiff.js"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.7",
-    "@babel/preset-env": "^7.20.2",
     "@jest/globals": "^29.0.1",
-    "babel-jest": "^29.3.1",
     "eslint": "^8.30.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jest": "^27.0.0",
     "jest": "^29.0.1",
     "jest-cli": "^29.0.1",
-    "npm-check-updates": "^16.0.6",
     "simple-git-hooks": "^2.8.0"
-  },
-  "jest": {
-    "verbose": true
   }
 }
