--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,7 @@
     "rules": {
         "import/extensions": "off",
         "no-underscore-dangle": "off",
-        "no-console": "off"
+        "no-console": "off",
+        "no-undef": "off"
     }
 }
