--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
   build:
 
     # The type of machine to run the job on
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
 
     strategy:
       # Node versions list
